--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,22 @@
-body { font-size: 14px;
-       line-height:18px; 
-       color:#000000; 
+body { margin:0;
+       padding:0;
+  
+       font-size: 14px;
+       line-height:24px; 
+       font-weight:700;
+       color:#ffffff; 
        font-family: PTSans;
+       text-transform:uppercase;
+       
+       background-color:#000000;
+       background-image: url("img/bg.jpg");
+       background-position: top center;
+       background-repeat: no-repeat;
 }
+a {
+  text-decoration: none;
+}
+.main-novigation {
 h1 { font-size: 30px;
      line-height:42px; 
      color:#000000;      
