--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,13 @@ body { margin:0;
        padding:0;
   
        font-size: 14px;
-       line-height:24px; 
+       line-height:  24px; 
        font-weight:700;
-       color:#ffffff; 
-       font-family: PTSans;
-       text-transform:uppercase;
+       color: #ffffff; 
+       font-family: PTSans Narrow;
+       text-transform: uppercase;
        
-       background-color:#000000;
+       background-color: #000000;
        background-image: url("img/bg.jpg");
        background-position: top center;
        background-repeat: no-repeat;
@@ -16,7 +16,39 @@ body { margin:0;
 a {
   text-decoration: none;
 }
-.main-novigation {
+.main-navigation {
+       font-size: 16px;
+       line-height: 20px;
+       color: #ffffff;
+  
+       background-color: #000000;
+}
+.site-navigation
+.user-navigation {
+       list-style:none;
+}
+.site-navigation
+.user-navigation {
+       color: #ffffff;
+}
+.site-navigation a:hover,
+.site-navigation a:focus,
+.user-navigation a:hover,
+.user-navigation a:focus {
+       background-color:#242424;
+}
+.feature-list {
+  list-style: none;
+}
+.feature-item {
+  text-align: center;
+}
+.feature-item h3 {
+  font-size: 30px;
+  line-height: 42px;
+
+
+  
 h1 { font-size: 30px;
      line-height:42px; 
      color:#000000;      
