--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,15 @@ body { margin:0;
 a {
   text-decoration: none;
 }
+.button {
+  font: inherit;
+  
+  text-align: center;
+  color: #ffffff;
+  vertical-alig
+  
+   
+  
 .main-navigation {
        font-size: 16px;
        line-height: 20px;
@@ -46,6 +55,30 @@ a {
 .feature-item h3 {
   font-size: 30px;
   line-height: 42px;
+}
+.index-column {
+  color:#000000;
+  
+  background-color: f8f5f2;
+  background-image: url("img/pattern-light.jpg");
+  background-position: 0 0;  
+  background-repeat: repeat;
+}
+.index-colums h2 {
+  font-size: 30px;
+  line-height: 42px;
+}
+.news-list {
+  list-style: none;
+}
+.news-item time {
+  text-transform: none;
+}
+.gallery-content {
+  background-color: #cccccc;
+  border: 7px solid #ffffff;
+}
+  
 
 
   
