--- a/css/style.css
+++ b/css/style.css
@@ -32,10 +32,6 @@ a {
 .button: active {
   background-color:#663d15;
 }
-  
-  
-   
-  
 .main-navigation {
        font-size: 16px;
        line-height: 20px;
@@ -89,10 +85,85 @@ a {
   background-color: #cccccc;
   border: 7px solid #ffffff;
 }
+.appointment-item input {
+  font: inherit;
   
-
-
+  background-color: transparent;
+  border: 2px solid #000000;
+}
+.appointment-item input focus {
+  border-color: #663d15;
+}
+.main-footer {
+  color: #ffffff;
   
+  background-color: #212121;
+  background-image: url("img/pattern-dark.jpg");
+  background-position: 0 0;
+  background-repeat: repeat;
+}
+.footer-contacts a {
+  color: #ffffff;
+  text-decoration: underline;
+}
+.footer-contacts a:hover
+.footer-contacts a:focus {
+  text-decoration:none;
+}
+.footer.social {
+  text-align: center;
+}
+.footer.social ul {
+  list-style: none;
+}
+.sotial-button {
+  color:"ffffff;
+}
+.footer-copyright {
+  text-align: center;
+}
+.footer-copyright botton:hover,
+.footer-copyright botton:focus {
+  color:#000000;
+  
+  background-color:#ffffff;
+}
+.modal {
+  color: #000000;
+  
+  background-color: #f8f3f0;
+  backround-image: url("img/pattern-light.jpg");
+  background-position: 0 0;
+  background-repeat: repeat;
+}
+.modal h2 {
+  font-size: 30px;
+  line-height: 42px;
+}
+.login-form input[type="text"]
+.login-form input[type="password"] {
+  font: inherit;
+  color: 000000;
+  text-transform: uppercase;
+  
+  background-color: #f9f6f3;
+  border: 2px solid #000000;
+}
+.login-form input: focus {
+  border-color: #663d15;
+}
+.login-checkbox: hover;
+.login-checkbox: fokus {
+  color: #663d15;
+}
+.restore {
+  color: #000000;
+  text-decoration:underline;
+}
+.restore:hover
+.restore:focus {
+  text-decoration: none;
+}
 h1 { font-size: 30px;
      line-height:42px; 
      color:#000000;      
