--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body { margin:0;
        line-height:  24px; 
        font-weight:700;
        color: #ffffff; 
-       font-family: PTSans;
+       font-family: PTSans Narrow;
        text-transform: uppercase;
        
        background-color: #000000;
