--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,7 @@ a {
 .login-form input[type="text"]
 .login-form input[type="password"] {
   font: inherit;
-  color: 000000;
+  color: #000000;
   text-transform: uppercase;
   
   background-color: #f9f6f3;
