--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,14 @@ body { margin:0;
        background-position: top center;
        background-repeat: no-repeat;
 }
+.inner.page {
+       color: #000000;
+  
+       background-color: #f9f6f3;
+       background-image: url("img/pattern-light.jpg");
+       background-position: 0 0;
+       background-repeat: repeat;
+}
 a {
   text-decoration: none;
 }
@@ -94,6 +102,27 @@ a {
 .appointment-item input focus {
   border-color: #663d15;
 }
+.page-title {
+  font-size: 30px;
+  line-height: 42px;
+}
+.breadcrumbs {
+  list-style: none;
+}
+.breadcrumbs a {
+  color: #000000;
+}
+.breadcrumbs a:hover,
+.breadcrumbs a:focus {
+  text-decoration: underline;
+}
+.breadcrumbs-current {
+  color:#aba9a7;
+}
+.filter fieldset {
+  border: none;
+}
+
 .main-footer {
   color: #ffffff;
   
