--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body { margin:0;
        text-transform: uppercase;
        
        background-color: #000000;
-       background-image: url("img/bg.jpg");
+       background-image: url("../img/bg.jpg");
        background-position: top center;
        background-repeat: no-repeat;
 }
@@ -17,7 +17,7 @@ body { margin:0;
        color: #000000;
   
        background-color: #f9f6f3;
-       background-image: url("img/pattern-light.jpg");
+       background-image: url("../img/pattern-light.jpg");
        background-position: 0 0;
        background-repeat: repeat;
 }
@@ -75,7 +75,7 @@ a {
   color:#000000;
   
   background-color: #f8f5f2;
-  background-image: url("img/pattern-light.jpg");
+  background-image: url("../img/pattern-light.jpg");
   background-position: 0 0;  
   background-repeat: repeat;
 }
@@ -224,7 +224,7 @@ product-info ul {
   color: #ffffff;
   
   background-color: #212121;
-  background-image: url("img/pattern-dark.jpg");
+  background-image: url("../img/pattern-dark.jpg");
   background-position: 0 0;
   background-repeat: repeat;
 }
@@ -258,7 +258,7 @@ product-info ul {
   color: #000000;
   
   background-color: #f8f3f0;
-  background-image: url("img/pattern-light.jpg");
+  background-image: url("../img/pattern-light.jpg");
   background-position: 0 0;
   background-repeat: repeat;
 }
