--- a/css/style.css
+++ b/css/style.css
@@ -290,19 +290,17 @@ product-info ul {
 .restore:focus {
   text-decoration: none;
 }
-h1 { font-size: 30px;
-     line-height:42px; 
-     color:#000000;      
-}
-h3 { font-size: 24px;
-     line-height:30px; 
-     color:#000000; 
-}
+
 /*--------Сеточные стили--------*/
 html,
 body {
   min-widht: 1122px;
   min-height: 1750px;
+}
+.container {
+  width: 940px;
+  margin: 0 auto;
+  padding: 0 10px;
 }
 .main-header {
   margin-botton: 75px;
@@ -324,6 +322,19 @@ body {
   /*--------Временно для сетки--------*/
   /*display: block;*/
 }
+.main-navigation-wrapper {
+  width: 100%;
+  margin-bottom: 60px;
+  
+  background-color: #000000;
+  /*--------Временно для сетки--------*/
+  main-height: 70px;
+}
+.main-navigation-wrapper .container {
+  display: flex;
+  justify-content:space-between;
+}
+  
 .site-navigation {
   widht: 620px;
   margin: 0;
