--- a/css/style.css
+++ b/css/style.css
@@ -427,6 +427,93 @@ body {
   /*--------Временно для сетки--------*/
    min-height: 100px;
 }
+.inner-page .main-header {
+  margin-bottom: 50px;
+  
+  background-color: #000000;
+   /*--------Временно для сетки--------*/
+  min-height: 70px;
+  background-color: transparent;
+}
+.inner-page .main-navigation {
+  alighn-items: flex-start;
+  flex-direction: row;
+  /*--------Временно для сетки--------*/
+  min-height: 70px;
+}
+.inner-page .main-header-logo {
+  order: 0;
+  
+  width: 111px;
+  height: 24px;
+  padding: 23px 20px;
+  }
+.inner-page .user-navigation {
+  margin-left: auto;
+}
+.page-title {
+  margin: 0;
+  margin-bottom: 15px;
+  padding: 0;
+  /*--------Временно для сетки--------*/
+  min-height: 42px;
+}
+.breadcrumbs {
+  margin: 0;
+  padding: 0;
+  margin-botom: 50px;
+  /*--------Временно для сетки--------*/
+  min-height: 24px;
+}
+.filters {
+  widht: 180px;
+  /*--------Временно для сетки--------*/
+  min-height: 687px;
+}
+.catalog {
+  widht: 700px;
+  /*--------Временно для сетки--------*/
+  min-height: 687px;
+}
+catalog-list {
+  display: flex;
+  flex-wrap:wrap;
+  padding: 0;
+  margin: 0;
+  
+  list-style: none;
+}
+.catalog-columns {
+  display:flex;
+  justify-content: space-between;
+}
+.catalog-item {
+  width: 220px;
+  margin-bottom: 20px;
+  margin-right: 20px;
+  /*--------Временно для сетки--------*/
+  min-height: 285px;
+  background-color: transparent;
+  box-shadow: inset 0 0 0 2px purple;
+}
+.catalog-item:nth-child(3n) {
+  margin-right: 0;
+}
+.pagination-list {
+  padding: 0;
+  margin: 0;
+  
+  list-style: none;
+  /*--------Временно для сетки--------*/
+  
+min-height: 47px;
+}
+  
+  
+  
+  
+  
+  
   
   
   
